--- a/flask_qa/templates/base.html
+++ b/flask_qa/templates/base.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">MBarara Epilepsy Center</a>
+          <a class="navbar-brand" href="#">Remedy</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
